tests/bad/testProcUndefined.grc
print("Calling undefined procedure")
undefinedProc()
print("This shouldn't execute")